<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_sku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sku"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_product_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_5"
        android:text="@string/product_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sku"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ll_action"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_5"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/action"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_product_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4">

        <TextView
            android:id="@+id/product_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/edit"
            android:textColor="@color/primaryVariant" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:background="@color/primaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ll_action"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/product_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/delete"
            android:textColor="@color/primaryVariant" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>