<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeActivity">

    <TextView
        android:id="@+id/home_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:text="@string/register"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/home_login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15"
        android:text="@string/login"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/home_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:paddingVertical="@dimen/dp_10"
        android:text="@string/add_product"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_login" />


    <EditText
        android:id="@+id/home_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/common_edt_background"
        android:enabled="false"
        android:hint="@string/search_by_sku"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="@+id/home_add_product"
        app:layout_constraintEnd_toStartOf="@+id/home_add_product"
        app:layout_constraintStart_toStartOf="parent" />


    <include
        android:id="@+id/list_header"
        layout="@layout/view_product_list_title"
        app:layout_constraintTop_toBottomOf="@+id/home_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:background="@drawable/list_background"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/dp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_header" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>